--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <body>
   This is a 5-minute meditation to be read aloud in the first person (“I’ve been invited to an event”).<br>
-  Click <a href="http://whatshappening.click/ok/" target="_blank">here</a> to start, or <a href="http://whatshappening.click/jenny/">listen to the guided audio version</a> by meditation author Jenny Nelson. <br>Recorded August 13, 2020 via Zoom video call with <a href="http://quick-books.biz/">Quickbooks</a>. Have a relaxing time...
+  Click <a href="ok/index.html" target="_blank">here</a> to start, or <a href="jenny/index.html">listen to the guided audio version</a> by meditation author Jenny Nelson. <br>Recorded August 13, 2020 via Zoom video call with <a href="http://quick-books.biz/">Quickbooks</a>. Have a relaxing time...
 </body>
 
 </html>
